# rust-edits

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
pkgs/edits/: cargo-tarpaulin-darwin.nix  default.nix
pkgs/rust-edits/: default.nix
src/: color.rs  costs.rs  difference.rs  edit_matrix.rs  edit_operation.rs  edits.rs  lib.rs  main.rs  matrix.rs  shorten.rs  token.rs
