[package]
name = "edits"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "This library displays the difference between 2 strings using the Levenshtein distance"
homepage = "https://github.com/etorreborre/rust-edits"
repository = "https://github.com/etorreborre/rust-edits"
readme = "README.md"
categories = ["value-formatting"]
keywords = ["levenshtein", "edit-distance"]

[dependencies]

[badges]
github = { repository = "etorreborre/rust-edits", workflow = "CI" }
